[project]
name = "sanpo"
version = "0.2.3"
description = "Sanitize PO files from gettext for version control"
authors = [{ name = "Thomas Aglassinger", email = "roskakori@users.sourceforge.net" }]
requires-python = ">=3.9, <4"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "clean",
    "gettext",
    "po",
    "sanitize",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "pygments>=2,<3",
    "chardet>=5,<6",
]

[project.urls]
Homepage = "https://github.com/roskakori/sanpo"
Repository = "https://github.com/roskakori/sanpo.git"
"Issue Tracker" = "https://github.com/roskakori/sanpo/issues"
Changes = "https://github.com/roskakori/sanpo/blob/main/CHANGES.md"

[project.scripts]
sanpo = "sanpo.command:main"

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = [
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
]
exclude = '''
/(
  \.git
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "coverage>=7,<8",
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "pre-commit>=4,<5",
]

[tool.isort]
profile = "black"
line_length = 120
default_section = "THIRDPARTY"
known_first_party = "sanpo"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-rA"
]
testpaths = [
    "tests",
]

[tool.hatch.build.targets.sdist]
include = ["sanpo"]

[tool.hatch.build.targets.wheel]
include = ["sanpo"]

[pycodestyle]
max-line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
