[project]
name = "sanpo"
version = "0.2.4"
description = "Sanitize PO files from gettext for version control"
authors = [{ name = "Thomas Aglassinger", email = "roskakori@users.sourceforge.net" }]
requires-python = ">=3.9, <4"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "clean",
    "gettext",
    "po",
    "sanitize",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "pygments>=2,<3",
    "chardet>=5,<6",
]

[project.urls]
Homepage = "https://github.com/roskakori/sanpo"
Repository = "https://github.com/roskakori/sanpo.git"
"Issue Tracker" = "https://github.com/roskakori/sanpo/issues"
Changes = "https://github.com/roskakori/sanpo/blob/main/CHANGES.md"

[project.scripts]
sanpo = "sanpo.command:main"

[dependency-groups]
dev = [
    "coverage~=7.8",
    "hatchling",
    "pytest~=8.3",
    "pytest-cov~=6.1",
    "pre-commit~=4.2",
    "ruff", # NOTE Because ruff still regularly changes, use the most current for now. Eventually pin it.
]

[tool.pytest.ini_options]
minversion = "8.3.5"
addopts = [
    "-rA"
]
testpaths = [
    "tests",
]

[tool.hatch.build.targets.sdist]
include = ["sanpo"]

[tool.hatch.build.targets.wheel]
include = ["sanpo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "htmlcov",
]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
ignore = [
    # Missing trailing comma → May cause conflicts when used with the formatter.
    "COM812",
    # Too many branches
    "PLR0912",
    # Too many arguments in function definition
    "PLR0913",
    # Too many statements
    "PLR0915",
    # Magic value used in comparison
    "PLR2004",
    # Unneccesarry assign → We regularly use `result = ...; return result` to examine the result in the debugger.
    "RET504",
    # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF012",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Abstract `raise` to an inner function
    "TRY301",
]
select = [
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-django
    "DJ",
    # flake8-datetimez
    "DTZ",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    #  flake8-gettext
    "INT",
    # flake8-logging
    "LOG",
    # perflint
    "PERF",
    # pygrep-hooks
    "PGH",
    # flake8-pie
    "PIE",
    # pylint
    "PL",
    # flake8-use-pathlib
    "PTH",
    # refactor
    "R",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # ruff specific rules
    "RUF",
    # flake8-self
    "SLF",
    # flake8-simplify
    "SIM",
    # tryceratops
    "TRY",
    # flake8-debugger
    "T10",
    # flake8-print
    "T20",
    # pyupgrade
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["pygount", "scripts", "tests"]
